--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,8 +5,7 @@ version: 0.14.8
 homepage: https://github.com/oddbit/flutter_facebook_app_events
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: ^2.0.0
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
